Git_WGBH_QC/src/objects/Search_Request__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Search Request</relationshipLabel>
        <relationshipName>Search_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finalize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExecuteNextBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExecuteNextBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextBatchTime__c</fullName>
        <label>NextBatchTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <referenceTo>Campaign_Criteria_Template__c</referenceTo>
        <relationshipLabel>Search Request</relationshipLabel>
        <relationshipName>Search_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Search_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Search Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Criteria__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Status__c</columns>
        <columns>Template__c</columns>
        <columns>Criteria__c</columns>
        <columns>IsContact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{0000000000}</displayFormat>
        <label>Search Request#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>